--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This is the collaborative site for CMS.635/835 - Designing Active Archives, a Digital
   Humanities course at MIT taught by Kurt Fendt. Students will
   use this space to keep track of course resources and example
-  museum projects, as well as to post updates as their own design
+  archive projects, as well as to post updates as their own design
   projects take shape.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://cms635.github.io/" # the base hostname & protocol for your site
